# realtime-ai-trans

./: LICENSE  README.md  electron-builder.yml  package-lock.json  package.json  pnpm-lock.yaml  v0.html
.agents/skills/github-collaboration/: SKILL.md
.agents/skills/github-collaboration/agents/: openai.yaml
.github/workflows/: pages.yml  release-windows.yml
docs/: IMPLEMENTATION_ARCHITECTURE.md  PRODUCT_DESIGN.md  design.md
docs/references/: translate.md  zhipu-asr.md  zhipu-flash-4-7.md
pages/: index.html
public/: subtitle.html
src/: App.css  App.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: asr.rs  audio.rs  db.rs  lib.rs  overlay.rs  prompts.rs  tools.rs  translate.rs  tray.rs
src-tauri/src/prompts/: translation_system.md
src/components/ui/: form.tsx
src/main/: index.ts
src/main/session/: SessionManager.ts  ZhipuProvider.ts
src/main/storage/: AppDatabase.ts
src/main/subtitles/: SubtitleStore.ts
src/preload/: index.d.ts  index.ts
src/renderer/: index.html
src/renderer/src/: App.tsx
src/renderer/src/app/: HomeView.tsx  MainView.tsx  OverlayView.tsx  SettingsView.tsx
src/renderer/src/assets/: main.css
src/renderer/src/audio/: pcm-capture-worklet.js
src/renderer/src/components/: HistoryList.tsx  SettingsControls.tsx  Sidebar.tsx  StatusRow.tsx  icons.tsx
src/renderer/src/hooks/: useAudioCapture.ts
src/renderer/src/lib/: constants.ts  format.ts  labels.ts  subtitleEvents.ts
src/shared/: types.ts
